--- a/css/index.css
+++ b/css/index.css
@@ -42,6 +42,17 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+
+.header-nav{ 
+    width: 60%;
+    display: inline-flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 2%;
+    font-size: 18px;
+    background-color: white;
+    color: black; 
+}
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -76,7 +87,7 @@ p {
     flex-wrap: wrap;
     justify-content: space-evenly;
     margin-bottom: 20px;
-    border-bottom: 1px dashed black;
+    border-bottom: 1px dashed red; 
 }
 
 .top-content .text-container {
@@ -87,7 +98,7 @@ p {
 
 .middle-content {
     margin-bottom: 20px;
-    border-bottom: 1px dashed black;
+    border-bottom: 1px dashed red;
 }
 
 .middle-content h2 {
@@ -104,7 +115,7 @@ p {
 .middle-content .boxes .box {
     width: 12.5%;
     height: 100px;
-    background: black;
+    background: green;
     margin: 20px 2.5%;
     color: white;
     display: flex;
@@ -124,7 +135,9 @@ p {
 
 .bottom-content .text-container:last-child {
     padding-right: 0;
+
 }
+
 
 footer {
     width: 100%;
